# makerere_passion_fruit_disease_detection

./: .gitignore  FasterRCNN.ipynb  README.md  dataset.yaml  preprocess.ipynb  pyproject.toml  yolov5.ipynb
mekerere/: IOUtility.py  __init__.py
