[tool.poetry]
name = "makerere"
version = "0.1.0"
description = ""
authors = ["Jonathen <jonathensundy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
notebook = "^6.4.5"
opencv-python = "^4.5.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
